[package]
name = "rust-hello-world"
version = "0.1.0"
authors = ["İsmail Hakkı TEKİN <ismail.tekin@trendyol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0.4" }
actix-files = "0.1.4"
